<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.2.0</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>org.rcsb</groupId>
	<artifactId>rcsb-sequence-coordinates</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>rcsb-sequence-coordinates</name>
	<description>RCSB PDB Sequence Alignment Map Service</description>
	<properties>
		<java.version>17</java.version>

		<rcsb.mojave.model.version>1.43.3-SEQUENCE-COORDINATES-SNAPSHOT</rcsb.mojave.model.version>
		<rcsb.common.version>2.7.4-SEQUENCE-COORDINATES-SNAPSHOT</rcsb.common.version>

		<schema.location>src/main/resources/schema</schema.location>
		<generated.schema.location>${project.build.outputDirectory}/build_schema</generated.schema.location>
		<generated.graphql.schema.location>${project.build.outputDirectory}/build_schema</generated.graphql.schema.location>
		<sequence.annotations.json.schema.name>sequence_annotations.json</sequence.annotations.json.schema.name>
		<sequence.alignment.json.schema.name>sequence_alignments.json</sequence.alignment.json.schema.name>
		<project.auto.package>org.rcsb.rcsbsequencecoordinates.auto</project.auto.package>

	</properties>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-graphql</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-webflux</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-rsocket</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-mongodb-reactive</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-messaging</artifactId>
		</dependency>

		<dependency>
			<groupId>io.projectreactor</groupId>
			<artifactId>reactor-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.graphql</groupId>
			<artifactId>spring-graphql-test</artifactId>
			<scope>test</scope>
		</dependency>

		<!--Schema Generation-->
		<dependency>
			<groupId>io.leangen.graphql</groupId>
			<artifactId>spqr</artifactId>
			<version>0.12.3</version>
		</dependency>
		<!--Schema Class Dependencies-->
		<dependency>
			<groupId>org.rcsb</groupId>
			<artifactId>rcsb-common</artifactId>
			<version>${rcsb.common.version}</version>
		</dependency>
		<dependency>
			<groupId>org.rcsb</groupId>
			<artifactId>rcsb-mojave-model</artifactId>
			<version>${rcsb.mojave.model.version}</version>
			<!-- jackson clashes with graphql-java -->
			<exclusions>
				<exclusion>
					<groupId>com.fasterxml.jackson.core</groupId>
					<artifactId>jackson-databind</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.rcsb</groupId>
			<artifactId>rcsb-util</artifactId>
			<version>1.7.0</version>
		</dependency>
	</dependencies>

	<build>
		<resources>
			<resource>
				<directory>${basedir}/src/main/resources</directory>
			</resource>
			<resource>
				<directory>${project.build.directory}/generated-resources</directory>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>

			<!--
				GraphQL Schema Generation
			-->
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>exec-maven-plugin</artifactId>
				<version>1.6.0</version>
				<configuration>
					<includeProjectDependencies>true</includeProjectDependencies>
					<cleanupDaemonThreads>false</cleanupDaemonThreads>
				</configuration>
				<!-- executes the supplied java class in the current VM with the enclosing project's dependencies as classpath -->
				<executions>
					<execution>
						<id>generate-graphql-schema</id>
						<phase>compile</phase>
						<goals>
							<goal>java</goal>
						</goals>
						<configuration>
							<mainClass>org.rcsb.graphqlschema.schema.SchemaGenerator</mainClass>
							<arguments>
								<argument>${project.build.directory}/classes/graphql/schema.graphqls</argument>
							</arguments>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

</project>
